--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
-baseURL = "https://examplesite.com/"
+baseURL = "/"
 title = "ExampleSite"
 paginate = 5
-theme = "PaperMod"
+theme = "devise"
 enableRobotsTXT = true
 buildDrafts = false
 buildFuture = false
